# BotSpot

./: README.md  main.py  pyproject.toml
src/: analysis_and_visualization.py  config.py  data_loader.py  feature_extractor.py
