[project]
name = "botspot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas",
 "networkx",
 "numpy",
 "scikit-learn",
 "matplotlib",
 "seaborn",
 "imblearn",
 "plotly>=6.2.0",
 "kaleido",
]

[dependency-groups]
test = ["pytest", "pytest-mock"]
